festiwal in nav

--- a/foto.html
+++ b/foto.html
@@ -42,6 +42,7 @@
               <li><a data-scroll href="contact.html" class="int-collapse-menu">Contact</a>
               </li>
               <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
+              <li><a data-scroll href="festival.html" class="int-collapse-menu">Festival</a></li>
               <li class="active"><a data-scroll href="foto.html" class="int-collapse-menu">Gallery</a>
               </li>
 
@@ -67,6 +68,7 @@
               </li>
               <li class="li-hamburger"><a data-scroll href="contact.html" class="int-collapse-menu">Contact</a></li>
               <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
+              <li><a data-scroll href="festival.html" class="int-collapse-menu">Festival</a></li>
               <li><a data-scroll href="foto.html" class="int-collapse-menu">Gallery</a></li>
             </ul>
             <div class="languages-2">
