--- a/polish-version-calisia-web/indexpl.html
+++ b/polish-version-calisia-web/indexpl.html
@@ -41,6 +41,7 @@
                             <li><a data-scroll href="contact-pl.html" class="int-collapse-menu">Kontakt</a>
                             </li>
                             <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
+                            <li><a data-scroll href="festival.html" class="int-collapse-menu">Festiwal</a></li>
                             <li><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
                             </li>
                         </ul>
@@ -69,6 +70,7 @@
                             <li class="li-hamburger"><a data-scroll href="contact-pl.html"
                                     class="int-collapse-menu">Kontakt</a></li>
                             <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
+                            <li><a data-scroll href="festival.html" class="int-collapse-menu">Festiwal</a></li>
                             <li><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
                             </li>
                         </ul>
