--- a/polish-version-calisia-web/rulespl.html
+++ b/polish-version-calisia-web/rulespl.html
@@ -42,8 +42,9 @@
                                 </li>
                                 <li class="active"><a data-scroll href="rulespl.html"
                                         class="int-collapse-menu">Konkurs</a></li>
-                                    <li><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
-                                    </li>
+                                <li><a data-scroll href="festival.html" class="int-collapse-menu">Festiwal</a></li>
+                                <li><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
+                                </li>
                             </ul>
                             <div class="languages">
                                 <a href="indexpl.html"><img class="img-flag"
@@ -71,6 +72,7 @@
                                 <li class="li-hamburger"><a data-scroll href="contact-pl.html"
                                         class="int-collapse-menu">Kontakt</a></li>
                                 <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
+                                <li><a data-scroll href="festival.html" class="int-collapse-menu">Festiwal</a></li>
                                 <li class="active"><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
                                 </li>
                             </ul>
@@ -116,28 +118,30 @@
                     <img class="img-kalisz-1 img-kalisz-2" src="slider-images/lukasz prowadzi kursy.jpg"
                         alt="city, kalisz, view" />
                     <div class="label-photo">
-                        Kursy mistrzowskie w Kanadzie prowadzone  przez przewodniczącego Jury Łukasza Byrdy
+                        Kursy mistrzowskie w Kanadzie prowadzone przez przewodniczącego Jury Łukasza Byrdy
                     </div>
                 </div>
                 <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
                     <img class="img-kalisz-1 img-kalisz-2" src="slider-images/PSM Kalisz recital Lukasza .jpg"
                         alt="city, kalisz, view" />
                     <div class="label-photo">
-                        Sala koncertowa w Kaliszu, w której okazję będą mieli zaprezentować się laureaci konkursu 
+                        Sala koncertowa w Kaliszu, w której okazję będą mieli zaprezentować się laureaci konkursu
                     </div>
                 </div>
 
                 <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
                     <img class="img-kalisz-1 img-kalisz-2" src="slider-images/wiedeń .jpg" alt="city, kalisz, view" />
                     <div class="label-photo width-label">
-                        Sala koncertowa w wiedeńskiej Klaviergalerie, w której okazję będą mieli zaprezentować się laureaci konkursu
+                        Sala koncertowa w wiedeńskiej Klaviergalerie, w której okazję będą mieli zaprezentować się
+                        laureaci konkursu
                     </div>
                 </div>
 
                 <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
                     <img class="img-kalisz-1 img-kalisz-2" src="slider-images/wiedeń 2.jpg" alt="city, kalisz, view" />
                     <div class="label-photo">
-                        Sala koncertowa w wiedeńskiej Klaviergalerie, w której okazję będą mieli zaprezentować się laureaci konkursu
+                        Sala koncertowa w wiedeńskiej Klaviergalerie, w której okazję będą mieli zaprezentować się
+                        laureaci konkursu
                     </div>
                 </div>
 
@@ -181,8 +185,10 @@
                 <div class="title text-center" data-scroll-reveal="enter from the bottom after 0.5s">
                     <div class="aligncenter">
                         <div class="socialFooter">
-                            <a href="https://m.facebook.com/100084549096550/" target="_blank"><i class="fa fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i class="fa fa-instagram"></i></a>
+                            <a href="https://m.facebook.com/100084549096550/" target="_blank"><i
+                                    class="fa fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i
+                                    class="fa fa-instagram"></i></a>
                         </div>
                         <p><span class="footer-s-1">&copy; 2022</span><span class="footer-span"> Calisia Arts
                                 Foundation</span></br><span class="footer-s-2">Natalia Byrdy Design</span></p>
