--- a/team.html
+++ b/team.html
@@ -36,6 +36,7 @@
                             <li><a data-scroll href="contact.html" class="int-collapse-menu">Contact</a>
                             </li>
                             <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
+                            <li><a data-scroll href="festival.html" class="int-collapse-menu">Festival</a></li>
                             <li><a data-scroll href="foto.html" class="int-collapse-menu">Gallery</a></li>
                         </ul>
                         <div class="languages">
@@ -59,6 +60,7 @@
                             <li class="li-hamburger"><a data-scroll href="contact.html"
                                     class="int-collapse-menu">Contact</a></li>
                             <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
+                            <li><a data-scroll href="festival.css" class="int-collapse-menu">Festival</a></li>
                             <li><a data-scroll href="foto.html" class="int-collapse-menu">Gallery</a></li>
                         </ul>
                         <div class="languages-2">
