--- a/about.html
+++ b/about.html
@@ -43,6 +43,7 @@
                             <li><a data-scroll href="contact.html" class="int-collapse-menu">Contact</a>
                             </li>
                             <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
+                            <li><a data-scroll href="festival.html" class="int-collapse-menu">Festival</a></li>
                             <li><a data-scroll href="foto.html" class="int-collapse-menu">Gallery</a></li>
                         </ul>
                         <div class="languages">
@@ -72,6 +73,7 @@
                             <li class="li-hamburger"><a data-scroll href="contact.html"
                                     class="int-collapse-menu">Contact</a></li>
                             <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
+                            <li><a data-scroll href="festival.html" class="int-collapse-menu">Festival</a></li>
                             <li><a data-scroll href="foto.html" class="int-collapse-menu">Gallery</a></li>
                         </ul>
                         <div class="languages-2">
