--- a/festival.html
+++ b/festival.html
@@ -43,6 +43,7 @@
                             </li>
                             <li class="active"><a data-scroll href="rules.html"
                                     class="int-collapse-menu">Competition</a></li>
+                            <li><a data-scroll href="festival.html" class="int-collapse-menu">Festival</a></li>
                             </li>
                             <li><a data-scroll href="foto.html" class="int-collapse-menu">Gallery</a></li>
                         </ul>
@@ -70,6 +71,7 @@
                             <li class="li-hamburger"><a data-scroll href="contact.html"
                                     class="int-collapse-menu">Contact</a></li>
                             <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
+                            <li><a data-scroll href="festival.html" class="int-collapse-menu">Festival</a></li>
                             <li><a data-scroll href="foto.html" class="int-collapse-menu">Gallery</a></li>
                         </ul>
                         <div class="languages-2">
@@ -88,87 +90,7 @@
 
     </header>
     <section class="contact">
-        <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
-            <h1 class="h1-team">The Competition</h1>
-        </div>
-        <p class="text-application width-form">
-            The 1st International Henryk Melcer Piano Competition aims to discover and promote
-            talented pianists from all over the world.
-            The patron of the competition is Henryk Melcer, an outstanding composer and pianist
-            closely associated with Kalisz, who was sadly forgotten after his death and is currently not
-            known to a wider circle of music lovers.
-            Winners of the competition will perform in concert halls in Poland and Austria, while
-            selected participants will have the opportunity to take part in master classes organised by
-            the Calisia Arts foundation, which will be conducted by renowned pianists and
-            pedagogues.
-            In addition to performances at the final concerts, there will be cash prizes for the winners.
-        </p>
-        <div class="width-form border-competition">
-
-        </div>
-
-        </div>
-        <div class="container-photo">
-            <div data-aos="fade-right" data-aos-duration="1000" class="image-about-1">
-                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/lukasz prowadzi kursy.jpg"
-                    alt="city, kalisz, view" />
-                <div class="label-photo">
-                    Masterclass with Jury member Łukasz Byrdy in Canada
-                </div>
-            </div>
-            <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/PSM Kalisz recital Lukasza .jpg"
-                    alt="city, kalisz, view" />
-                <div class="label-photo">
-                    Prizewinners' concert venue in Kalisz
-                </div>
-            </div>
-            <div class="small-photo-container">
-                <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/wiedeń .jpg" alt="city, kalisz, view" />
-                    <div class="label-photo width-label">
-                        Prizewinners' concert venue in Vienna
-                    </div>
-                </div>
-
-                <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/wiedeń 2.jpg" alt="city, kalisz, view" />
-                    <div class="label-photo">
-                        Prizewinners' concert venue in Vienna
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="width-form border-competition">
-
-        </div>
-        <div class="width-form">
-            <form>
-                <p class="text-application text-competition"> Rules of the competition <i
-                        class="fa-solid fa-arrow-down"></i> </p>
-                <a class="download-button" href="Rules Melcer Competition - ENG.docx" download>
-
-                    <p class="download-text">Download rules of the competition</p>
-
-                </a>
-            </form>
-        </div>
-    </section>
-    <section class="contact">
-
-        <div class="width-form">
-            <p class="text-application text-competition">Send your application to our e-mail: <spam
-                    class="bank-account-letters">
-                    calisiaarts@gmail.com</spam> <i class="fa-solid fa-arrow-down"></i>
-            </p>
-            <form>
-                <a class="download-button" href="Application form .docx" download>
-
-                    <p class="download-text-2">Download Application</p>
-
-                </a>
-            </form>
-        </div>
+        
     </section>
     <!--/ FOOTER SECTION-->
     <section id="footer" class="footer-wrapper text-center">
