--- a/polish-version-calisia-web/contact-pl.html
+++ b/polish-version-calisia-web/contact-pl.html
@@ -42,6 +42,7 @@
                             <li class="active"><a data-scroll href="contact-pl.html" class="int-collapse-menu">Kontakt</a>
                             </li>
                             <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
+                            <li><a data-scroll href="festival.html" class="int-collapse-menu">Festiwal</a></li>
                             <li><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
                             </li>
                         </ul>
@@ -66,6 +67,7 @@
                             <li class="li-hamburger"><a data-scroll href="contact-pl.html"
                                     class="int-collapse-menu">Kontakt</a></li>
                             <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
+                            <li><a data-scroll href="festival.html" class="int-collapse-menu">Festiwal</a></li>
                             <li><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
                             </li>
                         </ul>
