--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </div>
                 <div class="logo-box">
                     <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition"
-                        src="slider-images/logo.svg" />
+                        src="slider-images/logo.png" />
                     <div class="tp-caption rev-video2 customin customout start">
 
                     </div>
