--- a/polish-version-calisia-web/team-pl.html
+++ b/polish-version-calisia-web/team-pl.html
@@ -12,7 +12,8 @@
     <!-- end Google Font -->
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800,300' rel='stylesheet'
         type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Oswald:400,500,600,700,800,300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Oswald:400,500,600,700,800,300' rel='stylesheet'
+        type='text/css'>
     <link rel="stylesheet" href="team.css?id=8">
     <script src="https://kit.fontawesome.com/320464dc8f.js" crossorigin="anonymous"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -32,7 +33,8 @@
                             <li><a data-scroll href="indexpl.html" class="int-collapse-menu">Home</a></li>
                             <li><a data-scroll href="about-pl.html" class="int-collapse-menu">O Kaliszu</a>
                             </li>
-                            <li class="active"><a data-scroll href="team-pl.html" class="int-collapse-menu">Zespół</a></li>
+                            <li class="active"><a data-scroll href="team-pl.html" class="int-collapse-menu">Zespół</a>
+                            </li>
                             <li><a data-scroll href="contact-pl.html" class="int-collapse-menu">Kontakt</a>
                             </li>
                             <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
@@ -42,8 +44,10 @@
                         </ul>
                         <div class="languages">
                             <a href="indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
-                            <a href="../index.html"><img class="img-flag" src="slider-images/icons8-great-britain-48.png" /></a>
-                            <a href="../chinese-version/index-chinese.html"><img class="img-flag" src="slider-images/icons8-china-48.png" /></a>
+                            <a href="../index.html"><img class="img-flag"
+                                    src="slider-images/icons8-great-britain-48.png" /></a>
+                            <a href="../chinese-version/index-chinese.html"><img class="img-flag"
+                                    src="slider-images/icons8-china-48.png" /></a>
                         </div>
                         <button class="hamburger">
                             <i class="fa-solid fa-bars"></i>
@@ -51,12 +55,14 @@
                     </div>
                     <div class="hamburger-list-div">
                         <ul class="hamburger-list">
-                            <li class="li-hamburger"><a data-scroll href="indexpl.html" class="int-collapse-menu">Home</a>
+                            <li class="li-hamburger"><a data-scroll href="indexpl.html"
+                                    class="int-collapse-menu">Home</a>
                             </li>
-                            <li class="li-hamburger"><a data-scroll href="about-pl.html"
-                                    class="int-collapse-menu">O Kaliszu</a>
+                            <li class="li-hamburger"><a data-scroll href="about-pl.html" class="int-collapse-menu">O
+                                    Kaliszu</a>
                             </li>
-                            <li class="li-hamburger"><a data-scroll href="team-pl.html" class="int-collapse-menu">Zespół</a>
+                            <li class="li-hamburger"><a data-scroll href="team-pl.html"
+                                    class="int-collapse-menu">Zespół</a>
                             </li>
                             <li class="li-hamburger"><a data-scroll href="contact-pl.html"
                                     class="int-collapse-menu">Kontakt</a></li>
@@ -67,8 +73,10 @@
                         </ul>
                         <div class="languages-2">
                             <a href="indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
-                            <a href="../index.html"><img class="img-flag" src="slider-images/icons8-great-britain-48.png" /></a>
-                            <a href="../chinese-version/index-chinese.html"><img class="img-flag" src="slider-images/icons8-china-48.png" /></a>
+                            <a href="../index.html"><img class="img-flag"
+                                    src="slider-images/icons8-great-britain-48.png" /></a>
+                            <a href="../chinese-version/index-chinese.html"><img class="img-flag"
+                                    src="slider-images/icons8-china-48.png" /></a>
                         </div>
 
                     </div>
@@ -133,7 +141,7 @@
                         Od 2020 jest członkiem parlamentu studenckiego oraz referentem
                         ds. Równości w samorządzie studenckim Universität für Musik und
                         darstellende Kunst. Od kilku lat pianista i kompozytor działa jako
-                        pedagog w Wiedniu oraz Dolnej Austrii. 
+                        pedagog w Wiedniu oraz Dolnej Austrii.
                     </p>
                 </div>
             </div>
@@ -188,7 +196,7 @@
                         zamierza także prowadzić działalność edukacyjno-popularyzatorską
                         w zakresie sztuki muzycznej. Odznaczona Medalem Komisji
                         Edukacji Narodowej i Medalem „Za zasługi dla Województwa
-                        Wielkopolskiego”. 
+                        Wielkopolskiego”.
                     </p>
                 </div>
             </div>
@@ -243,76 +251,35 @@
                         Rosji, Austrii, Niemczech, Chinach, Malcie, Norwegii, Francji i
                         Włoszech. W 2017 roku ukazała się debiutancka płyta Łukasza
                         wydana staraniami Fundacji Piotra Klera z koncertami
-                        fortepianowymi F. Chopina i W. A. Mozarta. 
+                        fortepianowymi F. Chopina i W. A. Mozarta.
                     </p>
                 </div>
 
-                <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
-                    <div class="small-class-team">
-                        <img class="image-1" src="slider-images/Qi.jpg" alt="team member" />
-                        <h1 class="h1-team-members">Lelin Qi</h1>
-                    </div>
-                    <div class="team-text">
-                        <p class="p-team">
-                        Lelin Qi urodzona 13 kwietnia 1995 roku w prowincji Guangdong, w Chinach. Naukę gry na fortepianie
-                        rozpoczęła w wieku czterech lat. Uzyskała stopień licencjata na Akademii Muzycznej Xinghai w
-                        Chinach. Studia magisterskie z najwyższymi ocenami ukończyła pod kierownictwem prof. Jerzego
-                        Sterczyńskiego na Uniwersytecie Muzycznym im. Fryderyka Chopina w Warszawie. Obecnie
-                        kontynuuje naukę na studiach doktoranckich w Katedrze Kameralistyki Fortepianowej na
-                        Uniwersytecie Muzycznym im. Fryderyka Chopina pod kierownictwem prof. Katarzyny
-                        Jankowskiej, jednocześnie realizując także studia podyplomowe pod okiem prof. Marioli Cieniawy
-                        w Akademii Muzycznej w Krakowie.
-                        Zdobyła kilka znaczących nagród w takich konkursach, jak: W 2020 r. - Międzynarodowy Konkurs
-                        Talentów Muzycznych Online - Srebrna Nagroda w kategorii Muzyków Profesjonalnych, W 2019 r.-
-                        Międzynarodowe Forum Fortepianowe "Bieszczady bez granic" 2019 - Nagroda Specjalna, W
-                        2017 r. - Chiński Otwarty Konkurs Fortepianowy - Pierwsza Nagroda, W 2015 r. - Międzynarodowy
-                        Konkurs Fortepianowy "Chopin Remembrance Awards" w Hong Kongu - Trzecia Nagroda. Lelin
-                        została także laureatką XXXII Turnieju "Nagroda Księcia Antoniego Radziwiłła" w roku 2019, w
-                        Polsce.
-                        Występowała w ważnych miejscach w Polsce, takich jak: Filharmonia Narodowa w Warszawie,
-                        Zamek Królewski w Warszawie, Europejskie Centrum Muzyki Krzysztofa Pendereckiego. Dawała
-                        koncerty w wielu krajach, takich jak Chiny, Polska, Czechy, Austria i Belgia. Grała koncerty także
-                        na 38. Międzynarodowym Festiwalu Chopinowskim „Chopin w barwach jesieni liściach”, “VI
-                        Międzynarodowym Festiwalu im. Ignacego Jana Paderewskiego” oraz obchodach „70. rocznicy
-                        nawiązania stosunków dyplomatycznych między Chinami a Polską” dla Chińczyków w ambasadzie
-                        w Polsce. W styczniu 2022 roku, jako reprezentantka Katedr Fortepianu Krakowskiej Akademii
-                        Muzycznej oraz Uniwersytetu Muzycznego Fryderyka Chopina, zagrała dwa udane koncerty dla
-                        uczczenia 150-tych urodzin Aleksandra Skriabina. W lipcu 2022 roku Lelin zakończyła nagranie
-                        Brahmsa - Kwartetu fortepianowego nr 1 g-moll op.25 w Polskim Radiu.
-                        Obecnie jest stałą artystką w Salonie Chopina w Warszawie oraz festiwalu „Chopin en Vacances”.
-                        Andrzej Leraczyk - Dyrektor Działu Kultury i Sztuki ratusza w Ostrowie Wielkopolskim - tak
-                        wypowiedział się o jej występie: „Jakże odważna, perfekcyjna interpretacja, taki "rewolucyjny
-                        romantyzm"! Ta młoda chińska pianistka skupiła uwagę... Lelin Qi, zapamiętajcie to nazwisko!”.
-                        W sierpniu 2022 roku, Lelin pojawiła się w jednej z najbardziej wpływowych gazet - „Nouvelles
-                        d'Europe”, i inne gazety we Francji, Włoszech, Portugalii, Niemczech i Wielkiej Brytanii.
-                        Nabywała doświadczenie pracując ze wspaniałymi pianistami - takimi jak: Dmitri Alexeev, Philippe
-                        Giusiano, Andrzej Jasiński, Mikhail Voskresensky, Anna Malikova.
-                        </p>
-                    </div>
-
             </div>
         </div>
-    </div>
- 
-    <!--/ FOOTER SECTION-->
-    <section id="footer" class="footer-wrapper text-center">
-        <div data-aos="zoom-in" data-aos-duration="1000">
-            <div class="title text-center" data-scroll-reveal="enter from the bottom after 0.5s">
-                <div class="aligncenter">
-                    <div class="socialFooter">
-                        <a href="https://m.facebook.com/100084549096550/" target="_blank"><i class="fa fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i class="fa fa-instagram"></i></a>
+
+        <!--/ FOOTER SECTION-->
+        <section id="footer" class="footer-wrapper text-center">
+            <div data-aos="zoom-in" data-aos-duration="1000">
+                <div class="title text-center" data-scroll-reveal="enter from the bottom after 0.5s">
+                    <div class="aligncenter">
+                        <div class="socialFooter">
+                            <a href="https://m.facebook.com/100084549096550/" target="_blank"><i
+                                    class="fa fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i
+                                    class="fa fa-instagram"></i></a>
+                        </div>
+                        <p class="pfooter"><span class="footer-s-1">&copy; 2022</span><span class="footer-span"> Calisia
+                                Arts
+                                Foundation</span></br><span class="footer-s-2">Natalia Byrdy Design</span></p>
                     </div>
-                    <p class="pfooter"><span class="footer-s-1">&copy; 2022</span><span class="footer-span"> Calisia Arts
-                            Foundation</span></br><span class="footer-s-2">Natalia Byrdy Design</span></p>
                 </div>
-            </div>
-    </section>
-    <script src="js/about.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+        </section>
+        <script src="js/about.js"></script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
 </body>
 
 </html>
