--- a/team.html
+++ b/team.html
@@ -12,7 +12,8 @@
     <!-- end Google Font -->
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800,300' rel='stylesheet'
         type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Oswald:400,500,600,700,800,300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Oswald:400,500,600,700,800,300' rel='stylesheet'
+        type='text/css'>
     <link rel="stylesheet" href="team.css?id=8">
     <script src="https://kit.fontawesome.com/320464dc8f.js" crossorigin="anonymous"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -29,7 +30,7 @@
                         <a href="index.html"><img class="logo-calisia" src="slider-images/calisia-format.png"
                                 alt="logo, gold letters, calisia arts" /></a>
                         <ul class="nav navbar-nav">
-                            <li ><a data-scroll href="index.html" class="int-collapse-menu">Home</a></li>
+                            <li><a data-scroll href="index.html" class="int-collapse-menu">Home</a></li>
                             <li><a data-scroll href="about.html" class="int-collapse-menu">About</a>
                             </li>
                             <li class="active"><a data-scroll href="team.html" class="int-collapse-menu">Team</a></li>
@@ -40,9 +41,12 @@
                             <li><a data-scroll href="foto.html" class="int-collapse-menu">Gallery</a></li>
                         </ul>
                         <div class="languages">
-                            <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
-                            <a href="index.html"><img class="img-flag" src="slider-images/icons8-great-britain-48.png" /></a>
-                            <a href="chinese-version/index-chinese.html"><img class="img-flag" src="slider-images/icons8-china-48.png" /></a>
+                            <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag"
+                                    src="slider-images/icons8-poland-48.png" /></a>
+                            <a href="index.html"><img class="img-flag"
+                                    src="slider-images/icons8-great-britain-48.png" /></a>
+                            <a href="chinese-version/index-chinese.html"><img class="img-flag"
+                                    src="slider-images/icons8-china-48.png" /></a>
                         </div>
                         <button class="hamburger">
                             <i class="fa-solid fa-bars"></i>
@@ -64,9 +68,12 @@
                             <li><a data-scroll href="foto.html" class="int-collapse-menu">Gallery</a></li>
                         </ul>
                         <div class="languages-2">
-                            <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
-                            <a href="index.html"><img class="img-flag" src="slider-images/icons8-great-britain-48.png" /></a>
-                            <a href="chinese-version/index-chinese.html"><img class="img-flag" src="slider-images/icons8-china-48.png" /></a>
+                            <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag"
+                                    src="slider-images/icons8-poland-48.png" /></a>
+                            <a href="index.html"><img class="img-flag"
+                                    src="slider-images/icons8-great-britain-48.png" /></a>
+                            <a href="chinese-version/index-chinese.html"><img class="img-flag"
+                                    src="slider-images/icons8-china-48.png" /></a>
                         </div>
 
                     </div>
@@ -224,74 +231,20 @@
 
             </div>
 
-            <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
-                <div class="small-class-team">
-                    <img class="image-1" src="slider-images/Qi.jpg" alt="team member" />
-                    <h1 class="h1-team-members">Lelin Qi</h1>
-                </div>
-                <div class="team-text">
-                    <p class="p-team">
-                        Born on April 13, 1995 in Guangdong, China, and began to
-                        learn the piano at the age of four. She obtained a
-                        bachelor's diploma from the Xinghai Academy of Music in
-                        China and graduated master’s degree with the highest
-                        marks under the supervision of prof. Jerzy Sterczyński at
-                        the Frederic Chopin University of Music in Warsaw.
-                        Currently, she is continuing her doctorate studies in the
-                        piano chamber music department at the Frederic Chopin
-                        University of Music under the supervision of prof.
-                        Katarzyna Jankowska, meanwhile she’s also completing
-                        her postgraduate studies under the supervision of prof.
-                        Mariola Cieniawa at the Krzysztof Penderecki Academy of
-                        Music in Kraków.
-                        Lelin won several significant awards in such competitions
-                        as First prize in the Chinese Open Piano Competition in
-                        2017, Silver Award in the professional musician category of
-                        the International Online Music Talent Competition in 2020,
-                        Third Prize in the International Piano Competition "Chopin
-                        Remembrance Awards" in Hong Kong in 2015, Special
-                        Individual Prize of International Piano Forum "Bieszczady
-                        without borders" in Poland in 2019. She was also a laureate of the 2019 XXXII Tournament "Prince
-                        Antoni Radziwiłł Award" in Antonin, Poland.
-                        Lelin has given concerts at such essential concert halls in Poland: the National Philharmonic in
-                        Warsaw, the Royal Castle in Warsaw, and the Krzysztof Penderecki European Music Center in
-                        Lusławice. She has performed in many countries, such as China, Poland, the Czech Republic,
-                        Austria, and Belgium. She also played recitals at the 38th International "Chopin in autumn leaves"
-                        Festival and the "VI International Ignacy Jan Paderewski” Festival. In 2019, she showed up at the
-                        celebration of “The 70th anniversary of establishing diplomatic relations between China and Poland
-                        " and played for the Chinese embassy in Poland. In January 2022, as a representative of the piano
-                        departments of the Academy of Music in Kraków and the Fryderyk Chopin Universikty of Music,
-                        she played two successful concerts to celebrate Alexander Scriabin's 150th birthday. In July 2022,
-                        Lelin completed the recording of Brahms - Piano Quartet No. 1 in G minor, Op.25 on Polish
-                        National Radio.
-                        Currently, she is a regular artist performing at the Chopin Salon in Warsaw and the "Chopin en
-                        Vacances" International Festival. Andrzej Leraczyk - Director of the Culture and Arts Department of
-                        the Ostrów Wielkopolski City Hall once commented on her performance: "What a bold, perfect
-                        interpretation, such "revolutionary romanticism"! This young Chinese pianist attracted attention...
-                        Lelin Qi, remember this name!
-                        In August 2022, Lelin appeared in one of the most influential newspapers - "Nouvelles d'Europe",
-                        as well as some other overseas Chinese newspapers in other countries, such as France, Italy,
-                        Portugal, Germany, and the United Kingdom.
-                        During her artistic life, she has gained experience working with many renowned pianists such as
-                        Dmitri Alexeev, Philippe Giusiano, Andrzej Jasiński, Mikhail Voskresensky, and Anna Malikova. 
-
-                    </p>
-                </div>
-
-            </div>
-
 
         </div>
     </div>
- 
+
     <!--/ FOOTER SECTION-->
     <section id="footer" class="footer-wrapper text-center">
         <div data-aos="zoom-in" data-aos-duration="1000" class="container">
             <div class="title text-center" data-scroll-reveal="enter from the bottom after 0.5s">
                 <div class="aligncenter">
                     <div class="socialFooter">
-                        <a href="https://m.facebook.com/100084549096550/" target="_blank"><i class="fa fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i class="fa fa-instagram"></i></a>
+                        <a href="https://m.facebook.com/100084549096550/" target="_blank"><i
+                                class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i
+                                class="fa fa-instagram"></i></a>
                     </div>
                     <p><span class="footer-s-1">&copy; 2022</span><span class="footer-span"> Calisia Arts
                             Foundation</span></br><span class="footer-s-2">Natalia Byrdy Design</span></p>
