--- a/chinese-version/index-chinese.html
+++ b/chinese-version/index-chinese.html
@@ -129,6 +129,7 @@
                             Foundation</span></br><span class="footer-s-2">Natalia Byrdy Design</span></p>
                 </div>
             </div>
+        </div>
     </section>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
