--- a/rules.html
+++ b/rules.html
@@ -89,6 +89,11 @@
         </div>
 
     </header>
+    <div>
+        <a href=""></a>
+        <a href=""></a>
+        <a href=""></a>
+    </div>
     <section class="contact">
         <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
             <h1 class="h1-team">The Competition</h1>
