--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     <!--/ FOOTER SECTION-->
     <section id="footer" class="footer-wrapper text-center">
-        <div data-aos="zoom-in" data-aos-duration="1000" class="container">
+        <div  class="container">
             <div class="title text-center">
                 <div class="aligncenter">
                     <div class="socialFooter">
