--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="home-content">
 
                 <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition"
-                    src="slider-images/logo.png" />
+                    src="slider-images/baner1.png" />
 
                 <!--
             <div class="tp-caption rev-video2 customin customout start">
