--- a/chinese-version/index-chinese.html
+++ b/chinese-version/index-chinese.html
@@ -91,14 +91,13 @@
 
     </header>
 
-   
     <section id="home">
         <div class="home-image">
 
             <div class="home-content">
 
                 <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition"
-                    src="slider-images/logo.png" />
+                    src="slider-images/baner1.png" />
 
                 <!--
             <div class="tp-caption rev-video2 customin customout start">
