--- a/polish-version-calisia-web/indexpl.html
+++ b/polish-version-calisia-web/indexpl.html
@@ -96,7 +96,7 @@
             <div class="home-content">
 
                 <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition"
-                    src="slider-images/logo.png" />
+                    src="slider-images/baner1.png" />
 
                 <!--
             <div class="tp-caption rev-video2 customin customout start">
@@ -117,7 +117,6 @@
         </div>
         </div>
     </section>
-
     <!--/ FOOTER SECTION-->
     <section id="footer" class="footer-wrapper text-center">
         <div data-aos="zoom-in" data-aos-duration="1000" class="container">
