--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
     </header>
 
     <div class="about-container">
-        <div data-aos="zoom-in" data-aos-duration="1000" class="about-h">
+        <div  class="about-h">
             <h1 class="h1-about">About Kalisz City</h1>
         </div>
         <div class="flex-about-row">
