--- a/chinese-version/contact-chinese.html
+++ b/chinese-version/contact-chinese.html
@@ -135,7 +135,7 @@
     </section>
     <!--/ FOOTER SECTION-->
     <section id="footer" class="footer-wrapper text-center">
-        <div data-aos="zoom-in" data-aos-duration="1000" class="container">
+        <div  class="container">
             <div class="title text-center" data-scroll-reveal="enter from the bottom after 0.5s">
                 <div class="aligncenter">
                     <div class="socialFooter">
