--- a/polish-version-calisia-web/about-pl.html
+++ b/polish-version-calisia-web/about-pl.html
@@ -168,7 +168,7 @@
         </div>
     </div>
     <section id="footer" class="footer-wrapper text-center">
-        <div data-aos="zoom-in" data-aos-duration="1000"  class="container">
+        <div   class="container">
             <div class="title text-center" data-scroll-reveal="enter from the bottom after 0.5s">
                 <div class="aligncenter">
                   
