--- a/polish-version-calisia-web/indexpl.html
+++ b/polish-version-calisia-web/indexpl.html
@@ -119,7 +119,7 @@
     </section>
     <!--/ FOOTER SECTION-->
     <section id="footer" class="footer-wrapper text-center">
-        <div data-aos="zoom-in" data-aos-duration="1000" class="container">
+        <div  class="container">
             <div class="title text-center">
                 <div class="aligncenter">
 
