--- a/polish-version-calisia-web/team-pl.html
+++ b/polish-version-calisia-web/team-pl.html
@@ -260,7 +260,7 @@
 
         <!--/ FOOTER SECTION-->
         <section id="footer" class="footer-wrapper text-center">
-            <div data-aos="zoom-in" data-aos-duration="1000">
+            <div >
                 <div class="title text-center" data-scroll-reveal="enter from the bottom after 0.5s">
                     <div class="aligncenter">
                         <div class="socialFooter">
