--- a/polish-version-calisia-web/festival.html
+++ b/polish-version-calisia-web/festival.html
@@ -41,9 +41,9 @@
                             <li><a data-scroll href="team.html" class="int-collapse-menu">Team</a></li>
                             <li><a data-scroll href="contact.html" class="int-collapse-menu">Contact</a>
                             </li>
-                            <li class="active"><a data-scroll href="rules.html"
+                            <li><a data-scroll href="rules.html"
                                     class="int-collapse-menu">Competition</a></li>
-                            <li><a data-scroll href="festival.html" class="int-collapse-menu">Festiwal</a></li>
+                            <li class="active"><a data-scroll href="festival.html" class="int-collapse-menu">Festiwal</a></li>
                             </li>
                             <li><a data-scroll href="foto.html" class="int-collapse-menu">Gallery</a></li>
                         </ul>
