--- a/polish-version-calisia-web/festival.html
+++ b/polish-version-calisia-web/festival.html
@@ -71,7 +71,7 @@
                                 <li class="li-hamburger"><a data-scroll href="contact-pl.html"
                                         class="int-collapse-menu">Kontakt</a></li>
                                 <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
-                                <li class="active"><a data-scroll href="festival.html" class="int-collapse-menu">Festiwal</a></li>
+                                <li><a data-scroll href="festival.html" class="int-collapse-menu">Festiwal</a></li>
                             </ul>
                             <div class="languages-2">
                                 <a href="indexpl.html"><img class="img-flag"
