--- a/polish-version-calisia-web/artysci.html
+++ b/polish-version-calisia-web/artysci.html
@@ -19,6 +19,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Main Stylesheet CSS -->
     <link rel="stylesheet" href="festival.css?id=8">
+    <link rel="stylesheet" href="rules.css?id=8">
     <!-- SLIDER REVOLUTION 4.x CSS SETTINGS -->
     <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
 </head>
@@ -43,7 +44,7 @@
                                 <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
                                 <li class="active"><a data-scroll href="festival.html"
                                         class="int-collapse-menu">Festiwal</a></li>
-                            
+
                             </ul>
                             <div class="languages">
                                 <a href="indexpl.html"><img class="img-flag"
@@ -72,7 +73,7 @@
                                         class="int-collapse-menu">Kontakt</a></li>
                                 <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
                                 <li><a data-scroll href="festival.html" class="int-collapse-menu">Festiwal</a></li>
-                              
+
                             </ul>
                             <div class="languages-2">
                                 <a href="indexpl.html"><img class="img-flag"
@@ -93,13 +94,17 @@
             <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
                 <h1 class="h1-team">Artyści</h1>
             </div>
+            <div class="kafelek">
+                <a href="program.html">
+                    Program
+                </a>
+            </div>
 
-            <a href="program.html">
-                Program
-            </a>
-            <a href="O festiwalu.html">
-                O festiwalu
-            </a>
+            <div class="kafelek">
+                <a href="o-festiwalu.html">
+                    O festiwalu
+                </a>
+            </div>
         </section>
 
 
@@ -118,8 +123,8 @@
                             <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i
                                     class="fa fa-instagram"></i></a>
                         </div>
-                        <p><span class="footer-s-1">&copy; 2022</span><span class="footer-span"> Calisia Arts
-                                Foundation</span></br><span class="footer-s-2">Natalia Byrdy Design</span></p>
+                        <p><span class="footer-s-1">&copy; 2024</span><span class="footer-span"> Calisia Arts
+                                Foundation</span></p>
                     </div>
                 </div>
         </section>
