--- a/polish-version-calisia-web/festiwal24.html
+++ b/polish-version-calisia-web/festiwal24.html
@@ -97,13 +97,13 @@
             </div>
 
             <section class="main-festiwal">
-                <a href="o-festiwalu.html">
+                <a href="o-festiwalu.html" class="card">
                    O festiwalu
                 </a>
-                <a href="program.html">
+                <a href="program.html" class="card">
                     Program
                 </a>
-                <a href="artysci.html">
+                <a href="artysci.html" class="card">
                     Artyści
                 </a>
             </section>
@@ -124,8 +124,8 @@
                             <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i
                                     class="fa fa-instagram"></i></a>
                         </div>
-                        <p><span class="footer-s-1">&copy; 2022</span><span class="footer-span"> Calisia Arts
-                                Foundation</span></br><span class="footer-s-2">Natalia Byrdy Design</span></p>
+                        <p><span class="footer-s-1">&copy; 2024</span><span class="footer-span"> Calisia Arts
+                                Foundation</span></p>
                     </div>
                 </div>
         </section>
