--- a/polish-version-calisia-web/festival.html
+++ b/polish-version-calisia-web/festival.html
@@ -18,7 +18,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Main Stylesheet CSS -->
-    <link rel="stylesheet" href="festival.css?id=8">
+    <link rel="stylesheet" href="festival.css">
+    <link rel="stylesheet" href="rules.css?id=8">
     <!-- SLIDER REVOLUTION 4.x CSS SETTINGS -->
     <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
 </head>
@@ -43,7 +44,7 @@
                                 <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
                                 <li class="active"><a data-scroll href="festival.html"
                                         class="int-collapse-menu">Festiwal</a></li>
-                              
+
                             </ul>
                             <div class="languages">
                                 <a href="indexpl.html"><img class="img-flag"
@@ -96,13 +97,17 @@
             </div>
 
             <section class="main-festiwal">
-                <a href="festiwal24.html">
-                    Festiwal 2024
-                </a>
+                <div class="kafel-main">
+                    <a href="festiwal24.html" class="card">
+                        Festiwal 2024
+                    </a>
+                </div>
+
+
             </section>
         </section>
 
-      
+
 
 
         <!--/ FOOTER SECTION-->
@@ -117,8 +122,8 @@
                             <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i
                                     class="fa fa-instagram"></i></a>
                         </div>
-                        <p><span class="footer-s-1">&copy; 2022</span><span class="footer-span"> Calisia Arts
-                                Foundation</span></br><span class="footer-s-2">Natalia Byrdy Design</span></p>
+                        <p><span class="footer-s-1">&copy; 2024</span><span class="footer-span"> Calisia Arts
+                                Foundation</span></span></p>
                     </div>
                 </div>
         </section>
